# Engine

./: .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt  Main.cpp
Engine/Filesystem/: Filesystem.cpp  Filesystem.h  IFilesystem.h  ISearchPath.h  PathUtils.cpp  PathUtils.h  StdFilesystem.cpp  StdFilesystem.h  StdioSearchPath.cpp  StdioSearchPath.h  ZipSearchPath.cpp  ZipSearchPath.h
Engine/Platform/: IApplication.h  SDLApplication.cpp  SDLApplication.h
Engine/Private/: Main.cpp
Engine/Private/Filesystem/: Filesystem.cpp  Filesystem.h  ISearchPath.h  StdioSearchPath.cpp  StdioSearchPath.h  ZipSearchPath.cpp  ZipSearchPath.h
Engine/Private/Platform/: SDLApplication.h
Engine/Private/Rendering/GL/: GLRenderer.cpp  GLRenderer.h  GLTexture.cpp  GLTexture.h
Engine/Public/: IApplication.h  IRenderer.h  IShader.h  ITexture.h
Public/: GLBase.h  enum_flags.h  miniz.h  stb_image.h
